fixed qualities spacing

--- a/style.css
+++ b/style.css
@@ -148,8 +148,12 @@ nav ul li a {
 #qualities {
   width: 90%;
   max-width: 1366px;
-  margin: 7rem auto;
+  margin: 4rem auto;
   height: 100%;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
 }
 
